ecmascript/parser/tests/test262-error-references/fail/c578b57e8e6ce80d.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/c578b57e8e6ce80d.js:1:17
  |
1 | var answer = 42,
  |                 ^

